--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   pinput: ^2.2.31
 
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -65,8 +66,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/img/logo.png
+    - assets/img/auth_screen_background.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -80,12 +82,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: MA
+      fonts:
+        - asset: assets/fonts/MontserratAlternates-Light.ttf
+          weight: 300
+        - asset: assets/fonts/MontserratAlternates-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/MontserratAlternates-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/MontserratAlternates-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/MontserratAlternates-Bold.ttf
+          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
