--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,9 @@ dependencies:
   cloud_firestore: ^4.7.1
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.2
-  firebase_storage: ^11.2.2
+  firebase_storage: ^11.2.3
   pinput: ^2.2.31
+  image_picker: ^0.8.9
 
 
 
@@ -69,6 +70,8 @@ flutter:
   assets:
     - assets/img/logo.png
     - assets/img/auth_screen_background.png
+    - assets/img/add_photo.png
+    - assets/img/no_photo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
