--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   pinput: ^2.2.31
   image_picker: ^0.8.9
   connectivity_plus: ^4.0.1
+  provider: ^6.0.5
+  cached_network_image: ^3.2.3
 
 
 
