feat: add badge with liters coun near cart icon

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,8 @@ flutter:
     - assets/img/auth_screen_background.png
     - assets/img/add_photo.png
     - assets/img/honey1.png
+    - assets/img/appbar_title_left.png
+    - assets/img/appbar_title_right.png
 
   #   - images/a_dot_ham.jpeg
 
