--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   connectivity_plus: ^4.0.1
   provider: ^6.0.5
   cached_network_image: ^3.2.3
+  flutter_staggered_grid_view: ^0.4.1
 
 
 
