style: sale product in DetailScreen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
     - assets/img/appbar_title_left.png
     - assets/img/appbar_title_right.png
     - assets/img/delivery_info_truck.png
+    - assets/img/promotional_sticker.png
 
   #   - images/a_dot_ham.jpeg
 
