--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.honey_project">
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+
    <application
         android:label="honey_project"
         android:name="${applicationName}"
