--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,30 +21,25 @@ version: 1.0.0+1
 environment:
   sdk: '>=2.19.5 <3.0.0'
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   cloud_firestore: ^4.7.1
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.2
   firebase_storage: ^11.2.3
+  firebase_messaging: ^14.6.5
   pinput: ^2.2.31
   image_picker: ^0.8.9
   connectivity_plus: ^4.0.1
   provider: ^6.0.5
   cached_network_image: ^3.2.3
   flutter_staggered_grid_view: ^0.4.1
+  
+ 
+
 
 
 
