--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.0.5
   cached_network_image: ^3.2.3
   flutter_staggered_grid_view: ^0.4.1
+  shared_preferences: ^2.2.0
   
  
 
@@ -77,6 +78,8 @@ flutter:
     - assets/img/appbar_title_right.png
     - assets/img/delivery_info_truck.png
     - assets/img/promotional_sticker.png
+    - assets/img/moon.png
+    - assets/img/sun.png
 
   #   - images/a_dot_ham.jpeg
 
